fas_adv_amf_srvHEADERS = \
ad_call.hpp \
ad_collector.hpp \
ad_invoke.hpp \
ad_state1.hpp \
ad_state_error.hpp \
unserializer.hpp \
ad_chunk_prepare.hpp \
ad_content.hpp \
ad_invoke_unserializer.hpp \
ad_state2.hpp \
aspect.hpp \
serializer.hpp \
ad_chunk_splitter.hpp \
ad_invoke_connect.hpp \
ad_response.hpp \
ad_state3.hpp \
tags.hpp
fas_adv_amf_srvdir = $(includedir)/fas/adv/amf/srv
# call_point.hpp introduction.hpp
SUBDIRS =
